fix colors in nvim

--- a/soft/.tmux.conf
+++ b/soft/.tmux.conf
@@ -37,5 +37,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
 
-set -g @plugin 'egel/tmux-gruvbox'
-set -g @tmux-gruvbox 'dark' # or 'light'
+# Fix Colors
+set -g default-terminal "screen-256color"
+set -as terminal-features ",xterm-256color:RGB"
+
